--- a/shop/templates/shop/basic.html
+++ b/shop/templates/shop/basic.html
@@ -38,6 +38,12 @@
        <li class="nav-item">
         <a class="nav-link" href="/shop/contact">Contact Us</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/profile/">Profile</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/logout">Logout</a>
+      </li>
 
 
     </ul>
