--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,9 +1,9 @@
 {% extends "users/base.html" %}
 {% block title %} Login Page {% endblock title%}
 {% block content %}
-    <div class="form-content my-3 p-3">
-        <div class="container">
-            <div class="row justify-content-center">
+    <div class="form-content my-3 p-3" style="background-color: #e5e7e7">
+        <div class="container" style="background-color: #e5e7e7">
+            <div class="row justify-content-center" style="background-color: #F1EFEF">
                 <div class="col-lg-5">
                     <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
                         <div class="card-header justify-content-center">
@@ -27,13 +27,13 @@
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group">
-                                            <a href="{% url 'social:begin' 'github' %}"
+                                            <!-- <a href="{% url 'social:begin' 'github' %}"
                                                    class="btn btn-link btn-lg active btn-block">Sign in with GitHub</a>
                                             <a href="{% url 'social:begin' 'google-oauth2' %}"
                                                    class="btn btn-link btn-lg active btn-block">Sign in with Google</a>
                                             <hr>
                                             <p class="text-center"><strong>OR</strong></p>
-                                            <hr>
+                                            <hr> -->
                                             <label class="small mb-1">Username</label>
                                             {{ form.username }}
                                         </div>
