--- a/mac/templates/index.html
+++ b/mac/templates/index.html
@@ -9,11 +9,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Welcome to My Awesome Cart</title>
+    <title>Welcome to Car Kharido</title>
   </head>
-  <body>
+  <body style="background-color: #E8E8E8">
    <div class="jumbotron">
-  <h1 class="display-4">Welcome to My Awesome Cart</h1>
+  <h1 class="display-4">Welcome to Car Kharido</h1>
   <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
   <hr class="my-4">
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
