--- a/shop/templates/shop/about.html
+++ b/shop/templates/shop/about.html
@@ -11,12 +11,15 @@
   <!-- Main jumbotron for a primary marketing message or call to action -->
   <div class="jumbotron">
     <div class="container">
-      <h1 class="display-3">My Awesome Cart!</h1>
-      <p>My Awesome Cart Pvt Ltd. is an Indian electronic commerce company based in Bengaluru, India. Founded by Sachin Bansal and Binny Bansal in 2007, the company initially focused on book sales, before expanding into other product categories such as consumer electronics, fashion, and lifestyle products.
-
-The service competes primarily with Amazon' s Indian subsidiary, and the domestic rival Snapdeal.[5][6] as of March 2017, Flipkart held a 39.5% market share of India's e-commerce industry.[7] Flipkart is significantly dominant in the sale of apparel (a position that was bolstered by its acquisitions of Myntra and Jabong.com), and was described as being "neck and neck" with Amazon in the sale of electronics and mobile phones.[8] Flipkart also owns PhonePe, a mobile payments service based on the Unified Payments Interface (UPI).
-
-In August 2018, U.S.-based retail chain Walmart acquired a 77% controlling stake in Flipkart for US$16 billion, valuing it at $22 billion.</p>
+      <h1 class="display-3">Car Kharido</h1>
+      <p>Car Kharido is a leading digital marketplace and solutions provider for the automotive industry that connects car 
+        shoppers with sellers. Launched in 1998 and headquartered in Indore, the Company empowers shoppers with the data, 
+        resources and digital tools needed to make informed buying decisions and seamlessly connect with automotive retailers. 
+        In a rapidly changing market, Car Kharido enables dealerships and OEMs with innovative technical solutions and data-driven 
+        intelligence to better reach and influence ready-to-buy shoppers, increase inventory turn and gain market share. In 2018, 
+        Car Kharido acquired Dealer Inspire®, an innovative technology company building solutions that future-proof dealerships with 
+        more efficient operations, a faster and easier car buying process, and connected digital experiences that sell and service 
+        more vehicles.</p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
     </div>
   </div>
