--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,5 +1,5 @@
 {% extends 'shop/basic.html' %}
-{% block title%} MyAwesomeCart - Best Ecommerce Website{% endblock %}
+{% block title%} Car Kharido - Best Website to buy new and used cars{% endblock %}
 {% block css %}
 .col-md-3
 {
@@ -45,7 +45,7 @@ padding-right: 0;
     <!--Slideshow starts here -->
     {% for product, range, nSlides in allProds %}
     <h5 class="my-4">Flash Sale On {{product.0.category}} - Recommended Items</h5>
-    <div class="row">
+    <div class="row" style="background-color: #E8E8E8">
         <div id="demo{{forloop.counter}}" class="col carousel slide my-3" data-ride="carousel">
             <ul class="carousel-indicators">
                 <li data-target="#demo{{forloop.counter}}" data-slide-to="0" class="active"></li>
@@ -53,8 +53,8 @@ padding-right: 0;
                 <li data-target="#demo{{forloop.parentloop.counter}}" data-slide-to="{{i}}"></li>
                 {% endfor %}
             </ul>
-            <div class="container carousel-inner no-padding">
-                <div class="carousel-item active">
+            <div class="container carousel-inner no-padding" style="background-color: #E8E8E8">
+                <div class="carousel-item active" style="background-color: #E8E8E8">
                     {% for i in product %}
                     <div class="col-xs-3 col-sm-3 col-md-3">
                         <div class="card align-items-center" style="width: 18rem;">
