--- a/shop/templates/shop/paymentstatus.html
+++ b/shop/templates/shop/paymentstatus.html
@@ -1,5 +1,5 @@
 {% extends 'shop/basic.html' %}
-{% block title%} My Awesome Cart Tracker{% endblock %}
+{% block title%} Car Kharido Tracker{% endblock %}
 {% block body %}
 <div class="container">
     {{response}}
