--- a/shop/templates/shop/search.html
+++ b/shop/templates/shop/search.html
@@ -1,6 +1,6 @@
 {% extends 'shop/basic.html' %}
 
-{% block title%} Search Results - My Awesome Cart{% endblock %}
+{% block title%} Search Results - Car Kharido{% endblock %}
 
 
 {% block css %}
